apps/cradle/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cradle-api
  namespace: cradle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cradle-api
  template:
    metadata:
      labels:
        app: cradle-api
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: worker
        
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: cradle-api

      containers:
      - name: cradle-api
        image: ghcr.io/harris-consult/cradle-api:latest
        ports:
        - containerPort: 5000
