apps/cradle/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cradle-api
  namespace: cradle
spec:
  selector:
    app: cradle-api
  ports:
  - port: 80
    targetPort: 5000
